# rays

./: .gitignore  1.test  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  brdf.cpp  camera.cpp  camera_test.cpp  cmake_install.cmake  color.cpp  color_test.cpp  film.cpp  floating_point.h  intersection.cpp  light.cpp  light_test.cpp  local_geometry.cpp  material.cpp  matrix.cpp  matrix_test.cpp  normal.cpp  normal_test  normal_test.cpp  parser.cpp  point.cpp  point_test.cpp  primitive.cpp  ray.cpp  ray_test.cpp  ray_tracer.cpp  rays_test  sample.cpp  sampler.cpp  scene.cpp  shape.cpp  sphere.cpp  sphere_test.cpp  test  test.cpp  (+6 more)
